# MakeNewtonFractals

./: .gitignore  BMP.hpp  CMakeLists.txt  Color.hpp  ComplexNewtonFractal.hpp  ComplexPolynomial.hpp  NewtonFractal.hpp  Polynomial.hpp  README.md  main.cpp
include/: BMP.hpp  Color.hpp  NewtonFractal.hpp  Polynomial.hpp
src/: BMP.cpp  Color.cpp  NewtonFractal.cpp  Polynomial.cpp  main.cpp
